# microservice_fastapi

./: Makefile  README.md  example.db  pyproject.toml
app/: main.py  schemas.py
