[tool.poetry]
name = "microservice_fastapi"
version = "0.1.0"
description = "microservice fastapi"
authors = ["johnathan nguyen <nonosnguyen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
